<resources>
    <string name="app_name">Transparente</string>
    <string name="bolsa_familia">Bolsa Família</string>
    <string name="despesas_publicas">Despesas Públicas</string>
    <string name="principal">Principal</string>
    <string name="informacoes">Informações</string>
    <string name="consultar">Consultar</string>
    <string name="transparencia">Transparência</string>
    <string name="consulta_da_transparencia">Consulta\nda\ntransparência</string>
    <string name="consulte_informacoes_sobre_sua_cidade">Consulte informações sobre sua cidade</string>
    <string name="beneficio_prestacao_conta">Benefício de Prestação Continuada</string>
    <string name="garantia_safra">Garantia Safra</string>
    <string name="programa_erradicacao_trabalho_infantil">Programa de Erradicação do Trabalho Infantil</string>
    <string name="escolha_a_cidade">Escolha a cidade</string>
    <string name="mes_ano">Mês/Ano</string>
    <string name="escolha_o_estado">Escolha o estado</string>
    <string name="buscar">Buscar</string>
    <string name="campo_invalido">Campo invalido</string>
    <string name="bpc">B.P.C</string>
    <string name="peti">P.E.T.I</string>
    <string name="beneficiarios">Beneficiarios</string>
    <string name="valor_total">Valor total</string>
    <string name="quantidade_beneficiarios">%1$s beneficiarios</string>
    <string name="text_descricao_ajustes">Os dados são acessados por duas apis:
    \n\nIBGE
    \nAPI onde coleto as informações de cidades e estados
    \n\nPortal da transparência
    \nAPI onde coleto as informações referentes os valores e a quantidade de beneficiários</string>
</resources>
